project1 zip fie

--- a/project1/class39_project1.ipynb
+++ b/project1/class39_project1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -25,13 +25,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Table: classroom, department, course, instructor, section, teaches, student, takes, advisor, time_slot, prereq, "
+      "Command skipped:  table classroom already exists\n",
+      "Command skipped:  table department already exists\n",
+      "Command skipped:  table course already exists\n",
+      "Command skipped:  table instructor already exists\n",
+      "Command skipped:  table section already exists\n",
+      "Command skipped:  table teaches already exists\n",
+      "Command skipped:  table student already exists\n",
+      "Command skipped:  table takes already exists\n",
+      "Command skipped:  table advisor already exists\n",
+      "Command skipped:  table time_slot already exists\n",
+      "Command skipped:  table prereq already exists\n",
+      "Created Table:  11\n",
+      "classroom, department, course, instructor, section, teaches, student, takes, advisor, time_slot, prereq, "
      ]
     }
    ],
    "source": [
     "import sqlite3\n",
-    "from sqlite3 import OperationalError\n",
     "\n",
     "# db 생성\n",
     "con = sqlite3.connect('./university.db')\n",
@@ -53,7 +64,7 @@
     "# 만들어진 table 확인\n",
     "cur.execute('SELECT name FROM sqlite_master WHERE type=\"table\"')\n",
     "row = cur.fetchall()\n",
-    "print(\"Created Table: \", end='')\n",
+    "print(\"Created Table: \", len(row))\n",
     "for table in row:\n",
     "    print(table[0], end=', ')\n",
     "\n",
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -103,6 +114,144 @@
      "text": [
       "Created Table: classroom, department, course, instructor, section, teaches, student, takes, advisor, time_slot, prereq, \n",
       "\n",
+      "Command skipped:  UNIQUE constraint failed: classroom.building, classroom.room_number\n",
+      "Command skipped:  UNIQUE constraint failed: classroom.building, classroom.room_number\n",
+      "Command skipped:  UNIQUE constraint failed: classroom.building, classroom.room_number\n",
+      "Command skipped:  UNIQUE constraint failed: classroom.building, classroom.room_number\n",
+      "Command skipped:  UNIQUE constraint failed: classroom.building, classroom.room_number\n",
+      "Command skipped:  UNIQUE constraint failed: department.dept_name\n",
+      "Command skipped:  UNIQUE constraint failed: department.dept_name\n",
+      "Command skipped:  UNIQUE constraint failed: department.dept_name\n",
+      "Command skipped:  UNIQUE constraint failed: department.dept_name\n",
+      "Command skipped:  UNIQUE constraint failed: department.dept_name\n",
+      "Command skipped:  UNIQUE constraint failed: department.dept_name\n",
+      "Command skipped:  UNIQUE constraint failed: department.dept_name\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: course.course_id\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: instructor.ID\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: section.course_id, section.sec_id, section.semester, section.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: teaches.ID, teaches.course_id, teaches.sec_id, teaches.semester, teaches.year\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: student.ID\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: takes.ID, takes.course_id, takes.sec_id, takes.semester, takes.year\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: advisor.s_ID\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: time_slot.time_slot_id, time_slot.day, time_slot.start_hr, time_slot.start_min\n",
+      "Command skipped:  UNIQUE constraint failed: prereq.course_id, prereq.prereq_id\n",
+      "Command skipped:  UNIQUE constraint failed: prereq.course_id, prereq.prereq_id\n",
+      "Command skipped:  UNIQUE constraint failed: prereq.course_id, prereq.prereq_id\n",
+      "Command skipped:  UNIQUE constraint failed: prereq.course_id, prereq.prereq_id\n",
+      "Command skipped:  UNIQUE constraint failed: prereq.course_id, prereq.prereq_id\n",
+      "Command skipped:  UNIQUE constraint failed: prereq.course_id, prereq.prereq_id\n",
+      "Command skipped:  UNIQUE constraint failed: prereq.course_id, prereq.prereq_id\n",
       "\n",
       "Table: classroom 5\n",
       "[('Packard', '101', 500), ('Painter', '514', 10), ('Taylor', '3128', 70), ('Watson', '100', 30), ('Watson', '120', 50)]\n",
@@ -141,7 +290,6 @@
    ],
    "source": [
     "import sqlite3\n",
-    "from sqlite3 import OperationalError\n",
     "\n",
     "# db 생성\n",
     "con = sqlite3.connect('./university.db')\n",
@@ -234,7 +382,6 @@
    "source": [
     "#query1.py\n",
     "import sqlite3\n",
-    "from sqlite3 import OperationalError\n",
     "\n",
     "# db 생성\n",
     "con = sqlite3.connect('./university.db')\n",
@@ -277,7 +424,6 @@
    "source": [
     "#query2.py\n",
     "import sqlite3\n",
-    "from sqlite3 import OperationalError\n",
     "\n",
     "# db 생성\n",
     "con = sqlite3.connect('./university.db')\n",
@@ -338,7 +484,6 @@
    "source": [
     "#query3.py\n",
     "import sqlite3\n",
-    "from sqlite3 import OperationalError\n",
     "\n",
     "# db 생성\n",
     "con = sqlite3.connect('./university.db')\n",
