fix project1 ouput

--- a/project1/class39_project1.ipynb
+++ b/project1/class39_project1.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -405,19 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "semester,year,ID\n",
-      "Fall,2009,10101\n",
-      "Spring,2009,83821\n",
-      "Summer,2009,76766\n",
-      "Spring,2010,45565\n",
-      "Summer,2010,76766\n"
+      "year,semester,course count,name\n",
+      "2009,Fall,2,Srinivasan\n",
+      "2009,Spring,2,Brandt\n",
+      "2009,Summer,1,Crick\n",
+      "2010,Spring,2,Katz\n",
+      "2010,Summer,1,Crick\n"
      ]
     }
    ],
@@ -430,15 +430,18 @@
     "cur= con.cursor()\n",
     "\n",
     "#query\n",
-    "query='select t1.semester as semester, t1.year as year, ID from (select semester, year,count(ID) as cnt, ID from teaches group by year,semester,ID) as t1 inner join (select semester, year, max(cnt) as max_cnt from (select semester, year,count(ID) as cnt from teaches group by year,semester,ID) group by semester, year) as t2 on t1.cnt=t2.max_cnt and t1.semester=t2.semester and t1.year=t2.year'\n",
+    "query='''\n",
+    "with ID_table as (select t1.year as year, t1.semester as semester, cnt, ID from (select semester, year,count(ID) as cnt, ID from teaches group by year,semester,ID) as t1 inner join (select semester, year, max(cnt) as max_cnt from (select semester, year,count(ID) as cnt from teaches group by year,semester,ID) group by semester, year) as t2 on t1.cnt=t2.max_cnt and t1.semester=t2.semester and t1.year=t2.year)\n",
+    "select year, semester, cnt, name from ID_table natural join instructor where ID_table.ID = instructor.ID;\n",
+    "'''\n",
     "\n",
     "# select\n",
     "try:\n",
     "    cur.execute(query)\n",
     "    row=cur.fetchall()\n",
-    "    print('semester,year,ID')\n",
+    "    print('year,semester,course count,name')\n",
     "    for tup in row:\n",
-    "        print(tup[0], ',', tup[1], ',', tup[2], sep='')\n",
+    "        print(tup[0], ',', tup[1], ',', tup[2],',', tup[3], sep='')\n",
     "except sqlite3.Error as e:\n",
     "    print(\"Command skipped: \", e)\n",
     "\n",
@@ -454,22 +457,31 @@
    "source": [
     "모든 연도의 학기(semester)마다 가장 많은 과목(course)를 가르친 강의자(instructor)를 구하는 질의를 작성하시오. 만약 한 학기에 같은 수의 수업을 진행했다면 결과에 전부 포함되어야 합니다.\n",
     "\n",
-    "각 학기에 대해서 count가 max인 id를 학기와 함꼐 출력\n",
+    "각 학기에 대해서 count가 max인 id를 학기와 함께 출력\n",
+    "\n",
     "그 결과를 instructor와 조인하고 연도, 학기, id를 출력\n",
     "\n",
     "각 학기에 교수 별로 진행한 수업의 수\n",
+    "\n",
     "select semester, year,count(ID) as cnt from teaches group by year,semester,ID;\n",
     "\n",
     "각 학기에 가장 많은 수업을 진행한 교수가 진행한 수업의 수\n",
+    "\n",
     "select semester, year, max(cnt) as max_cnt from (select semester, year,count(ID) as cnt from teaches group by year,semester,ID) group by semester, year;\n",
     "\n",
-    "최종 결과\n",
-    "select t1.semester as semester, t1.year as year, ID from (select semester, year,count(ID) as cnt, ID from teaches group by year,semester,ID) as t1 inner join (select semester, year, max(cnt) as max_cnt from (select semester, year,count(ID) as cnt from teaches group by year,semester,ID) group by semester, year) as t2 on t1.cnt=t2.max_cnt and t1.semester=t2.semester and t1.year=t2.year;"
+    "중간 결과\n",
+    "\n",
+    "select t1.semester as semester, t1.year as year, ID from (select semester, year,count(ID) as cnt, ID from teaches group by year,semester,ID) as t1 inner join (select semester, year, max(cnt) as max_cnt from (select semester, year,count(ID) as cnt from teaches group by year,semester,ID) group by semester, year) as t2 on t1.cnt=t2.max_cnt and t1.semester=t2.semester and t1.year=t2.year;\n",
+    "\n",
+    "출력 형식 반영 (year, semester, cnt, name)\n",
+    "\n",
+    "with ID_table as (select t1.year as year, t1.semester as semester, cnt, ID from (select semester, year,count(ID) as cnt, ID from teaches group by year,semester,ID) as t1 inner join (select semester, year, max(cnt) as max_cnt from (select semester, year,count(ID) as cnt from teaches group by year,semester,ID) group by semester, year) as t2 on t1.cnt=t2.max_cnt and t1.semester=t2.semester and t1.year=t2.year)\n",
+    "select year, semester, cnt, name from ID_table natural join instructor where ID_table.ID = instructor.ID;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -518,13 +530,16 @@
     "만약 동일한 좌석 수의 과목이 있다면 결과에 전부 포함되어야 합니다.\n",
     "\n",
     "- time_slot에서 start_hr가 8이상 이고 end_hr가 11이하인 것들 찾기\n",
+    "\n",
     "select time_slot_id from (select time_slot_id, day, min(start_hr) as min_start_hr, max(end_hr) as max_end_hr from time_slot group by time_slot_id) where min_start_hr>=8 and max_end_hr<=11;\n",
     "\n",
     "- 조건에 맞는 section 찾기\n",
+    "\n",
     "with available_time_slot_id as ( select time_slot_id from (select time_slot_id, day, min(start_hr) as min_start_hr, max(end_hr) as max_end_hr from time_slot group by time_slot_id) where min_start_hr>=8 and max_end_hr<=11)\n",
     "select * from section where time_slot_id in available_time_slot_id and semester='Summer' and year=2010;\n",
     "\n",
     "- 좌석 수와 title join\n",
+    "\n",
     "with candidate_section as (\n",
     "select *\n",
     "from (with available_time_slot_id as (select time_slot_id from (select time_slot_id, day, min(start_hr) as min_start_hr, max(end_hr) as max_end_hr from time_slot group by time_slot_id) where min_start_hr>=8 and max_end_hr<=11)\n",
@@ -532,13 +547,14 @@
     "where tmp_section.building=classroom.building and tmp_section.room_number=classroom.room_number and tmp_section.course_id=course.course_id)\n",
     "\n",
     "- max capacity 찾기\n",
+    "\n",
     "with candidate_section as (\n",
     "select *\n",
     "from (with available_time_slot_id as (select time_slot_id from (select time_slot_id, day, min(start_hr) as min_start_hr, max(end_hr) as max_end_hr from time_slot group by time_slot_id) where min_start_hr>=8 and max_end_hr<=11)\n",
     "select * from section where time_slot_id in available_time_slot_id and semester='Summer' and year=2010) as tmp_section natural join classroom natural join (select course_id, title from course) as course\n",
     "where tmp_section.building=classroom.building and tmp_section.room_number=classroom.room_number and tmp_section.course_id=course.course_id), max_capacity as (\n",
     "select max(capacity) as max_capacity from candidate_section)\n",
-    "select title from candidate_section where candidate_section.capacity in max_capacity;\n"
+    "select capacity, title from candidate_section where candidate_section.capacity in max_capacity;\n"
    ]
   }
  ],
